--- a/Menu.html
+++ b/Menu.html
@@ -59,7 +59,7 @@
   <hr>
   
         <article>
-      <img src="capu.jpg" alt="Cappuccino" width="200" height="200" loading="lazy">
+      <img src="cappuccino.jpg" alt="Cappuccino" width="200" height="200" loading="lazy">
       <h3>Cappuccino</h3>
       <p>Perfect balance of espresso, milk, and foam.</p>
       <p><strong>Price: $5.50</strong></p>
