--- a/Menu.html
+++ b/Menu.html
@@ -73,7 +73,7 @@
     <h2>Snacks & Pastries</h2>
     
     <article>
-      <img src="choco.jpg" alt="Chocolate Croissant" width="200" height="200" loading="lazy">
+      <img src="Choco.jpg" alt="Chocolate Croissant" width="200" height="200" loading="lazy">
       <h3>Chocolate Croissant</h3>
       <p>Flaky pastry with rich chocolate filling.</p>
       <p><strong>Price: $2.50</strong></p>
