--- a/Menu.html
+++ b/Menu.html
@@ -82,7 +82,7 @@
 <hr>
 
     <article>
-      <img src="blue.jpg" alt="Blueberry Muffin" width="200" height="200" loading="lazy">
+      <img src="Blue.jpg" alt="Blueberry Muffin" width="200" height="200" loading="lazy">
       <h3>Blueberry Muffin</h3>
       <p>Soft, fluffy, and full of real blueberries.</p>
       <p><strong>Price: $2.00</strong></p>
