--- a/Menu.html
+++ b/Menu.html
@@ -91,7 +91,7 @@
     <hr>
     
                 <article>
-              <img src="butter.jpg" alt="Butter Croissant" width="200" height="200" loading="lazy">
+              <img src="Butter.jpg" alt="Butter Croissant" width="200" height="200" loading="lazy">
               <h3>Butter Croissant</h3>
               <p>Flaky, golden pastry baked to perfection every morning.</p>
               <p><strong>$2.00</strong></p>
@@ -100,7 +100,7 @@
 <hr>
 
             <article>
-              <img src="chip.jpg" alt="Chocolate Chip Cookie" width="200" height="200" loading="lazy">
+              <img src="Chip.jpg" alt="Chocolate Chip Cookie" width="200" height="200" loading="lazy">
               <h3>Chocolate Chip Cookie</h3>
               <p>Soft and chewy with rich chocolate chunks in every bite.</p>
               <p><strong>$1.80</strong></p>
